# trabalho-extra-fundamentos

./: .gitignore  LICENSE  fix_path_user.ps1  pyproject.toml  run_marimo.ps1
assets/: .gitkeep
docs/: CNAME  index.html
notebooks/: 01_am_modulation.py  02_fm_modulation.py  03_pm_modulation.py  04_sampling_nyquist_aliasing.py  05_aliasing_animation.py  06_piano_synthesis.py  07_butterworth_antialiasing.py  08_signal_filtering_noise.py  09_min_test.py  09_pure_tone_filter.py  10_adc_scenario_budget.py  10_mock_adc_test.py  11_exercises_shannon_snr.py
notebooks/__marimo__/session/: 01_am_modulation.py.json  06_piano_synthesis.py.json  07_butterworth_antialiasing.py.json  09_pure_tone_filter.py.json  10_adc_scenario_budget.py.json  10_mock_adc_test.py.json  11_exercises_shannon_snr.py.json
path_backups/: machine_path_backup.txt  user_path_backup.txt
