[project]
name = "marimo-comms"
version = "1.0.0"
description = "Notebooks interativos Marimo para Fundamentos de Comunicação"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "marimo>=0.15.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "polars>=1.0.0",
    "scipy>=1.14.0",
    "pyzmq>=27.1.0",
    "pyperclip>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.black]
line-length = 100
target-version = ["py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
